update port for initialState