@@ -24,7 +24,7 @@
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.version>1.11.1.Final</quarkus.platform.version>
-        <surefire-plugin.version>2.22.1</surefire-plugin.version>
+        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
         <mysql-connector-java.version>8.0.20</mysql-connector-java.version>
         <lombok.version>1.18.16</lombok.version>
     </properties>
@@ -158,6 +158,7 @@
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
+                        <argLine>--enable-preview</argLine>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
